@@ -1,2 +1,3 @@
 Og Maciel <ogmaciel@gnome.com>
 Behrooz Shabani <behrooz@rock.com>
+Ed Bruck <ed.bruck1@gmail.com>
