@@ -10,6 +10,8 @@ Radio Tray 0.6 - 11/04/2010
 * Added XSPF playlist format support
 * Added MPRIS support to DBus interface
 * Added keyboard media keys support
+* Added ASF playlist format
+* Improved playlist decoding
 
 Radio Tray 0.5.1 - 11/04/2010
 =============================
